# datafusion-python

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  main.yaml  test.yaml
src/: context.rs  dataframe.rs  errors.rs  expression.rs  functions.rs  lib.rs  to_arrow.rs  to_py.rs  to_rust.rs  types.rs  udaf.rs  udf.rs
tests/: generic.py  test_df.py  test_sql.py
