[package]
name = "datafusion"
version = "0.1.0"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.22"
rand = "0.7"
pyo3 = { version = "0.12.1", features = ["extension-module"] }
datafusion = { git = "https://github.com/jorgecarleitao/arrow.git", rev = "4f0a46c" }
arrow = { git = "https://github.com/jorgecarleitao/arrow.git", rev = "4f0a46c" }

[lib]
name = "datafusion"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-dist = ["pyarrow>=1,<2"]
